# FastAPI-Beyond-CRUD---A-FastAPI-Course

./: README.md  pyproject.toml
Bookly/alembic/: env.py
Bookly/alembic/versions/: 11b1528d835b_update_user_relationship.py  2e5b138232c1_update_user_relationship.py  fb546a083239_initial_migration.py
Bookly/src/: main.py
Bookly/src/auth/: dependencies.py  middleware.py  models.py  routes.py  schemas.py  services.py  utils.py
Bookly/src/books/: models.py  schemas.py  services.py
Bookly/src/conf/: celery.py  database.py  redis.py  utils.py
Bookly/src/reviews/: models.py  schemas.py  services.py
Bookly/src/tags/: routes.py  services.py
backend/alembic/: env.py
backend/src/: main.py
backend/src/auth/: middleware.py  models.py  routes.py  schemas.py  services.py
backend/src/books/: models.py  routes.py  schemas.py  services.py
backend/src/conf/: celery.py  celery_tasks.py  config.py  database.py  redis.py
backend/src/reviews/: models.py  routes.py  schemas.py
backend/src/tags/: models.py
