[tool.poetry]
name = "fastapi beyond crud - a fastapi course"
version = "0.1.0"
description = ""
authors = ["Takib Yeasar <mdtakibyeasar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
pydantic = {extras = ["dotenv"], version = "^2.10.1"}
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.22"
alembic = "^1.14.0"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"
greenlet = "^3.1.1"
gevent = "^24.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
